[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supply-chain-env"
version = "1.0.0"
description = "Supply Chain Disruption Management — OpenEnv RL Environment"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["reinforcement-learning", "supply-chain", "openenv", "simulation"]
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.8.2",
    "openai>=2.7.2",
    "requests==2.32.3",
    "python-multipart==0.0.12",
    "pyyaml==6.0.2",
    "openenv-core>=0.2.0",
]

[project.scripts]
serve = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["env*", "api*", "server*"]

[tool.setuptools.package-data]
"*" = ["openenv.yaml", "README.md"]
